# Hair-Renderer-X

./: .gitattributes  CMakeLists.txt  README.md
ext/Vulkan-Engine/: CMakeLists.txt  README.md
ext/Vulkan-Engine/include/engine/: common.h  core.h
ext/Vulkan-Engine/include/engine/core/: resource_manager.h
ext/Vulkan-Engine/include/engine/graphics/: command_buffer.h  descriptors.h  device.h  uniforms.h  vao.h
ext/Vulkan-Engine/resources/shaders/forward/: hair_strand.glsl  hair_strand2.glsl  hair_strand3.glsl  hair_strand_disney.glsl  hair_strand_epic.glsl
ext/Vulkan-Engine/resources/shaders/misc/: CLASSIC_density_voxelization.glsl  DDA_density_voxelization.glsl  DDA_fiber_optical_density.glsl  compute_density_voxelization.glsl  compute_hair_GI.glsl  compute_hair_LUT.glsl  compute_hair_NGI.glsl  compute_hair_N_global.glsl  compute_hair_fiber_scattering.glsl  compute_hair_fiber_scattering_disney.glsl  compute_hair_over_sphere.glsl  compute_percieved_density.glsl  (+4 more)
ext/Vulkan-Engine/resources/textures/: Dp.hdr  Dp1.hdr  Dp3D.hdr  DpFix.hdr  DpNorm.hdr
ext/Vulkan-Engine/src/core/: resource_manager.cpp
ext/Vulkan-Engine/src/graphics/: command_buffer.cpp  descriptors.cpp  device.cpp  shaderpass.cpp
ext/Vulkan-Engine/src/tools/: loaders.cpp  widgets.cpp
gt/: gtgen.py  hair_scene.xml
resources/models/: eyes.ply  neural_hair0.ply  neural_hair_ALVARO.ply  neural_head_ALVARO.ply  neural_head_PABLO.ply  neural_head_TONO.ply  neural_head_TONY.ply  woman.ply  woman2.ply
src/: application.cpp  application.h  gui.cpp  gui.h  hair_loader.cpp  hair_loader.h  main.cpp
(+48 files in other folders)
